# BattleOfCapibara

./: .gitignore  LICENSE  README.md
client/src/: config.py  game.py
doc/: readme.md
dome/: dome.py
dome/lushi/: dome.py
dome/方块/: alien.py  main.py  settings.py
server/: CMakeLists.txt
server/src/: CMakeLists.txt  NomeServer.cc
src/: GameBaseObj.py  config.py  game.py  settings.py
test/: launch.py
